# bill-splitter

./: .gitignore  Cargo.toml  IOS_TESTING_LINUX.md  MOBILE.md  MOBILE_DEV_CONFIG.md  MOBILE_SETUP_COMPLETE.md  README.md  TESTING_WITHOUT_IDE.md  build-ios-remote.sh  build-ios-workflow.sh  build-wasm.sh  capacitor.config.json  debug-android.sh  deploy.sh  host-ipa.sh  install-xcode-mac.sh  install.sh  logs-android.sh  mobile-help.sh  package-ios-ipa.sh  package-lock.json  package.json  quick-test-android.sh  sessions.db  sessions.json  setup-deploy-user-complete.sh  setup-deploy-user.sh  setup-mac-headless.sh  setup-mobile.sh  split-bills.service  start-server.sh  test-android.sh  test-deploy-setup.sh  test-ios-on-linux.sh
.github/workflows/: ios-build.yml  release.yml  rust.yml
docs/: WASM_GUIDE.md
src/: ai.rs  email.rs  image_utils.rs  main.rs  models.rs  tests.rs
static/: capacitor.js  hybrid-calculator.js  index.html  og-image-template.html  script.js  styles.css  sw.js
templates/: index.html
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
