[package]
name = "split-bills-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly module for offline bill calculation"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Use wasm-bindgen 0.2.92 - last version before externref was enabled by default
# Newer versions (0.2.93+) use reference-types which can cause issues in some browsers
wasm-bindgen = "=0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "=0.3.69"

# Optional: better panic messages in browser console
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "=0.3.42"

[profile.release]
# Optimize for small WASM file size
opt-level = "s"
lto = true
